--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <div class="progress-container">
+    <div class="progress circular indeterminate">
+      <progress indeterminate>75%</progress>
+    </div>
+  </div>
   <app-root></app-root>
 </body>
 </html>
