--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Apps</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <div class="progress-container">
-    <div class="progress circular indeterminate">
-      <progress indeterminate>75%</progress>
+  <head>
+    <meta charset="utf-8" />
+    <title>Apps</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body>
+    <div class="progress-container">
+      <div class="progress circular indeterminate">
+        <progress indeterminate>75%</progress>
+      </div>
     </div>
-  </div>
-  <app-root></app-root>
-</body>
+    <app-root></app-root>
+  </body>
 </html>
