--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Apps</title>
     <base href="/"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="description" content="news"/>
+    <meta name="description" content="apps"/>
     <link rel="icon" type="image/x-icon" href="favicon.ico"/>
     <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
