add progressive-web-apps slides

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="apps" />
-    <meta name="theme-color" content="#1976d2" />
+    <meta name="theme-color" content="#333333" />
     <meta name="revision" content="" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com/" />
