--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,6 @@
         <progress indeterminate="">75%</progress>
       </div>
     </div>
-    <x-root></x-root>
+    <x-shell></x-shell>
   </body>
 </html>
